<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LetsDo</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="taskTitle">Title</string>
    <string name="taskAssignee">Assignee</string>
    <string name="taskCategory">Category</string>
    <string name="taskDescription">Descrition</string>
    <string name="taskDateDue">Due_To</string>
    <string name="taskDateCreated">Created_On</string>
    <string name="taskDateModified">Modified_On</string>
    <string name="taskStatus">Status</string>
    <string name="addTask">Add</string>
    <string name="saveTask">Save</string>
    <string name="discardTask">Discard</string>
    <string name="titleHint">Do</string>
    <string name="categoryHint">Project A</string>
    <string name="customValue">Costum</string>
    <string name="addValue">Add</string>
    <string name="addCategoryTitle">New Category</string>
    <string name="addAssigneeTitle">New Assignee</string>
    <string name="assigneeHint">Alex</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_change">Change</string>
    <string name="title_activity_select">Select</string>
    <string name="selectAll">All</string>
    <string name="delTask">Delete</string>
    <string name="filterSw">Group by</string>
    <string name="left">Category</string>
    <string name="right">Assignee</string>
    <string name="optionsFileName">options</string>
    
</resources>
